# ISEF-Project-_2

./: index.html  smartai-dashboard.html
smartai-backend/: ARCHITECTURE_DIAGRAMS.md  BUILD.md  CMakeLists.txt  DATABASE_ENCRYPTION_IMPLEMENTATION.md  DATABASE_MIGRATION_COMPLETE.md  DATABASE_QUICK_REFERENCE.md  DELIVERY_SUMMARY.md  FILE_DIRECTORY_GUIDE.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  MIGRATION_SQLCIPHER_TO_CRYPTOGRAPHY.md  QUICKSTART.md  README.md  STRUCTURE.md  build.bat  package.json  requirements.txt  start.bat
smartai-backend/database/: schema.sql
smartai-backend/installer/: smartai-installer.nsi
smartai-backend/src/cpp/: core_engine.cpp  core_engine_websocket.cpp
smartai-backend/src/electron/: ipc_handler.js  main-integrated.js  main.js  preload.js
smartai-backend/src/python/: ai_module.py  ai_module_websocket.py  database_encryption.py  database_integration_guide.py  requirements.txt
